--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <java.version>8</java.version>
+
 
             <!-- On configure le plugin permettant d'exécuter directement le programme avec maven -->            
             <!-- On pourra exécuter le programme avec : 'mvn exec:java' -->
